force-app/main/default/objects/Contrato2__c/fields/DatosContrato__c.field-meta.xml
<CustomField>
    <fullName>DatosContrato__c</fullName>
    <label>DatosContrato</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <controllingField>Tipo_Contrato__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>BillingAddress</fullName>
            </value>
            <value>
                <fullName>CEO__c</fullName>
            </value>
            <value>
                <fullName>Ciudad__c</fullName>
            </value>
            <value>
                <fullName>Cliente_Facturacion_Global__c</fullName>
            </value>
            <value>
                <fullName>ComisionMinima__c</fullName>
            </value>
            <value>
                <fullName>ComoFactura__c</fullName>
            </value>
            <value>
                <fullName>CondicionesPagoPlazo__c</fullName>
            </value>
            <value>
                <fullName>ConstanciaInscripcionRFC__c</fullName>
            </value>
            <value>
                <fullName>Controla_Presencia_Vehiculo_NFC__c</fullName>
            </value>
            <value>
                <fullName>ControlVolumetrico__c</fullName>
            </value>
            <value>
                <fullName>CorreoRecibeFactura__c</fullName>
            </value>
            <value>
                <fullName>Dia__c</fullName>
            </value>
            <value>
                <fullName>Dia_de_la_Semana__c</fullName>
            </value>
            <value>
                <fullName>Dia_Inicio__c</fullName>
            </value>
            <value>
                <fullName>Dia_Liberacion__c</fullName>
            </value>
            <value>
                <fullName>DiscountFree__c</fullName>
            </value>
            <value>
                <fullName>EspecialDia__c</fullName>
            </value>
            <value>
                <fullName>Facturacion_Cargos__c</fullName>
            </value>
            <value>
                <fullName>Facturacion_Comision__c</fullName>
            </value>
            <value>
                <fullName>Facturacion_Plasticos__c</fullName>
            </value>
            <value>
                <fullName>Fianza__c</fullName>
            </value>
            <value>
                <fullName>Frecuencia_Liberacion_Automatica__c</fullName>
            </value>
            <value>
                <fullName>Frecuencia_de_Pedido__c</fullName>
            </value>
            <value>
                <fullName>FrecuenciaFacturacion__c</fullName>
            </value>
            <value>
                <fullName>IdentificacionOficialVigente__c</fullName>
            </value>
            <value>
                <fullName>ImprimeLogo__c</fullName>
            </value>
            <value>
                <fullName>Item_Contratacion__c</fullName>
            </value>
            <value>
                <fullName>Ligado_a__c</fullName>
            </value>
            <value>
                <fullName>Linea_Operativa__c</fullName>
            </value>
            <value>
                <fullName>LineasImpresionTarjeta__c</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>