force-app/main/default/objects/Contrato2__c/fields/Deduce__c.field-meta.xml
<CustomField>
    <fullName>Deduce__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Deduce</label>
    <type>Checkbox</type>
</CustomField>