force-app/main/default/objects/Contrato2__c/fields/DenyPurchaseBusinessDay__c.field-meta.xml
<CustomField>
    <fullName>DenyPurchaseBusinessDay__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Impedir Compra en Día Hábil</label>
    <type>Checkbox</type>
</CustomField>