force-app/main/default/objects/Contrato2__c/fields/DenyPurchaseSaturday__c.field-meta.xml
<CustomField>
    <fullName>DenyPurchaseSaturday__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Impedir Compra en Sábado</label>
    <type>Checkbox</type>
</CustomField>