force-app/main/default/objects/Contrato2__c/fields/DenyPurchaseSunday__c.field-meta.xml
<CustomField>
    <fullName>DenyPurchaseSunday__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Impedir Compra en Domingo</label>
    <type>Checkbox</type>
</CustomField>