force-app/main/default/objects/Contrato2__c/fields/DepositoOperacional__c.field-meta.xml
<CustomField>
    <fullName>DepositoOperacional__c</fullName>
    <description>Para familia de mantenimiento tipo de consumo Pospago</description>
    <label>Depósito Operacional</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>