force-app/main/default/objects/Contrato2__c/fields/Dia_de_corte__c.field-meta.xml
<CustomField>
    <fullName>Dia_de_corte__c</fullName>
    <description>Día de corte mensual para Mantenimiento</description>
    <formula>IF( 
MONTH( DATEVALUE(CreatedDate) ) = 12, 
DATE( YEAR( DATEVALUE(CreatedDate) ), 12, 31 ), 
DATE( YEAR( DATEVALUE(CreatedDate) ), MONTH ( DATEVALUE(CreatedDate) ) + 1, 1 ) - 1 
)</formula>
    <label>Día de corte</label>
    <type>Date</type>
</CustomField>