force-app/main/default/objects/Contrato2__c/fields/Dia_de_la_Semana__c.field-meta.xml
<CustomField>
    <fullName>Dia_de_la_Semana__c</fullName>
    <label>Día de la Semana</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Lunes</fullName>
            </value>
            <value>
                <fullName>Martes</fullName>
            </value>
            <value>
                <fullName>Miercoles</fullName>
            </value>
            <value>
                <fullName>Jueves</fullName>
            </value>
            <value>
                <fullName>Viernes</fullName>
            </value>
            <value>
                <fullName>Sabado</fullName>
            </value>
            <value>
                <fullName>Domingo</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>