force-app/main/default/objects/Contrato2__c/fields/Dia_Inicio__c.field-meta.xml
<CustomField>
    <fullName>Dia_Inicio__c</fullName>
    <label>Día  Inicio</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
            </value>
            <value>
                <fullName>2</fullName>
            </value>
            <value>
                <fullName>3</fullName>
            </value>
            <value>
                <fullName>4</fullName>
            </value>
            <value>
                <fullName>5</fullName>
            </value>
            <value>
                <fullName>6</fullName>
            </value>
            <value>
                <fullName>7</fullName>
            </value>
            <value>
                <fullName>8</fullName>
            </value>
            <value>
                <fullName>9</fullName>
            </value>
            <value>
                <fullName>10</fullName>
            </value>
            <value>
                <fullName>11</fullName>
            </value>
            <value>
                <fullName>12</fullName>
            </value>
            <value>
                <fullName>13</fullName>
            </value>
            <value>
                <fullName>14</fullName>
            </value>
            <value>
                <fullName>15</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>