force-app/main/default/objects/Contrato2__c/fields/Dias_credito__c.field-meta.xml
<CustomField>
    <fullName>Dias_credito__c</fullName>
    <label>Días de crédito</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>