force-app/main/default/objects/Contrato2__c/fields/DiasCredito__c.field-meta.xml
<CustomField>
    <fullName>DiasCredito__c</fullName>
    <description>Para familia de mantenimiento, tipo de consumo Pospago.</description>
    <label>Días de crédito</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>30 días</fullName>
            </value>
            <value>
                <fullName>60 días</fullName>
            </value>
            <value>
                <fullName>90 días</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>