force-app/main/default/objects/Contrato2__c/fields/DiasLiquidacionFactura__c.field-meta.xml
<CustomField>
    <fullName>DiasLiquidacionFactura__c</fullName>
    <description>Días naturales para liquidación de factura de servicios otorgados (contrato Mantenimiento)</description>
    <label>Días naturales para liquidación factura</label>
    <length>18</length>
    <type>Text</type>
</CustomField>