force-app/main/default/objects/Contrato2__c/fields/Direccion_Personalizacion__c.field-meta.xml
<CustomField>
    <fullName>Direccion_Personalizacion__c</fullName>
    <label>Direccion Personalizacion</label>
    <length>255</length>
    <type>Text</type>
</CustomField>