force-app/main/default/objects/Contrato2__c/fields/DireccionesAuxiliares__c.field-meta.xml
<CustomField>
    <fullName>DireccionesAuxiliares__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Direcciones auxiliares</label>
    <type>Checkbox</type>
</CustomField>