force-app/main/default/objects/Contrato2__c/fields/DireccionFiscal__c.field-meta.xml
<CustomField>
    <fullName>DireccionFiscal__c</fullName>
    <label>Dirección Fiscal</label>
    <length>255</length>
    <type>Text</type>
</CustomField>