force-app/main/default/objects/Contrato2__c/fields/discountDieselMarine__c.field-meta.xml
<CustomField>
    <fullName>discountDieselMarine__c</fullName>
    <label>Descuento Diesel Marino</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>CI20 - Partic.Prog.Gub.Diesel.Marino</fullName>
            </value>
            <value>
                <fullName>CI22 - Partic.Prog.Gub.Diesel.Marino</fullName>
            </value>
            <value>
                <fullName>CI24 - Partic.Prog.Gub.Diesel.Marino</fullName>
            </value>
            <value>
                <fullName>CI26 - Partic.Prog.Gub.Diesel.Marino</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>