force-app/main/default/objects/Contrato2__c/fields/DiscountFree__c.field-meta.xml
<CustomField>
    <fullName>DiscountFree__c</fullName>
    <label>Discount Fee</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>