force-app/main/default/objects/Contrato2__c/fields/discountRiberena__c.field-meta.xml
<CustomField>
    <fullName>discountRiberena__c</fullName>
    <label>Descuento Ribereña</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>CI10 - Partic.Prog.Gub.Ribereña</fullName>
            </value>
            <value>
                <fullName>CI12 - Partic.Prog.Gub.Ribereña</fullName>
            </value>
            <value>
                <fullName>CI14 - Partic.Prog.Gub.Ribereña</fullName>
            </value>
            <value>
                <fullName>CI16 - Partic.Prog.Gub.Ribereña</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>