force-app/main/default/objects/Contrato2__c/fields/Domiciliation__c.field-meta.xml
<CustomField>
    <fullName>Domiciliation__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Domiciliación</label>
    <type>Checkbox</type>
</CustomField>