force-app/main/default/objects/Contrato2__c/fields/Efectivo__c.field-meta.xml
<CustomField>
    <fullName>Efectivo__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Efectivo</label>
    <type>Checkbox</type>
</CustomField>