force-app/main/default/objects/Contrato2__c/fields/Ejecutivo_ADV__c.field-meta.xml
<CustomField>
    <fullName>Ejecutivo_ADV__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Indica a que ejecutivo de ADV fue asignado</description>
    <label>Ejecutivo ADV asignado</label>
    <referenceTo>User</referenceTo>
    <relationshipName>EjecutivoADV</relationshipName>
    <type>Lookup</type>
</CustomField>