force-app/main/default/objects/Contrato2__c/fields/electronicAffiliatesProduct__c.field-meta.xml
<CustomField>
    <fullName>electronicAffiliatesProduct__c</fullName>
    <label>Producto Afiliados Electrónico</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Restaurante</fullName>
            </value>
            <value>
                <fullName>Vestimenta</fullName>
            </value>
            <value>
                <fullName>Regalo</fullName>
            </value>
            <value>
                <fullName>Despensa Sector Público</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>