force-app/main/default/objects/Contrato2__c/fields/electronicPaymentTerm__c.field-meta.xml
<CustomField>
    <fullName>electronicPaymentTerm__c</fullName>
    <label>Plazo de Pago Electrónico</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>