force-app/main/default/objects/Contrato2__c/fields/Emision_complemento__c.field-meta.xml
<CustomField>
    <fullName>Emision_complemento__c</fullName>
    <label>Emisión complemento</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
            </value>
            <value>
                <fullName>2</fullName>
            </value>
            <value>
                <fullName>3</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>