force-app/main/default/objects/Contrato2__c/fields/EmpresaPrincipal_PL__c.field-meta.xml
<CustomField>
    <fullName>EmpresaPrincipal_PL__c</fullName>
    <label>Empresa Principal</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Prime</fullName>
            </value>
            <value>
                <fullName>No Prime</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>