force-app/main/default/objects/Contrato2__c/fields/Entidad_Cuenta__c.field-meta.xml
<CustomField>
    <fullName>Entidad_Cuenta__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Entidad Cuenta</label>
    <referenceTo>EntidadCuenta__c</referenceTo>
    <relationshipName>Administraci_n_de_Ventas</relationshipName>
    <type>Lookup</type>
</CustomField>