force-app/main/default/objects/Contrato2__c/fields/Entidad_Legal__c.field-meta.xml
<CustomField>
    <fullName>Entidad_Legal__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Entidad Legal</label>
    <referenceTo>EntidadLegal__c</referenceTo>
    <relationshipName>Administraci_n_de_Ventas</relationshipName>
    <type>Lookup</type>
</CustomField>