force-app/main/default/objects/Contrato2__c/fields/EstatusADV_FTt__c.field-meta.xml
<CustomField>
    <fullName>EstatusADV_FTt__c</fullName>
    <formula>TEXT( PartidaPresupuesto__r.Quote.Opportunity.Estatus__c )</formula>
    <label>Estatus ADV</label>
    <type>Text</type>
</CustomField>