force-app/main/default/objects/Contrato2__c/fields/EtapaContrato__c.field-meta.xml
<CustomField>
    <fullName>EtapaContrato__c</fullName>
    <label>Estatus Alta del Cliente</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>En proceso</fullName>
            </value>
            <value>
                <fullName>Finalizado</fullName>
                <label>Iniciado</label>
            </value>
            <value>
                <fullName>Rechazado para corrección</fullName>
                <label>Pausada</label>
            </value>
            <value>
                <fullName>Autorizado</fullName>
                <label>Cerrada</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>