force-app/main/default/objects/Contrato2__c/fields/EtapaOportunidad_Tt__c.field-meta.xml
<CustomField>
    <fullName>EtapaOportunidad_Tt__c</fullName>
    <description>Muestra la etapa de la Oportunidad relacionada a Contrato2 (ADV) para garantizar que todos los registros que el Ejecutivo ADV ve sean de Oportunidades que están en etapa de Alta de Cliente</description>
    <formula>TEXT( PartidaPresupuesto__r.Quote.Opportunity.StageName )</formula>
    <label>Etapa de la Oportunidad</label>
    <type>Text</type>
</CustomField>