force-app/main/default/objects/Contrato2__c/fields/Facturacion_Comision__c.field-meta.xml
<CustomField>
    <fullName>Facturacion_Comision__c</fullName>
    <label>Facturación Comisión</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Separado del Consumo</fullName>
            </value>
            <value>
                <fullName>Junto al Consumo</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>