force-app/main/default/objects/Contrato2__c/fields/Facturacion_Plasticos__c.field-meta.xml
<CustomField>
    <fullName>Facturacion_Plasticos__c</fullName>
    <label>Facturación Plásticos</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Separado del Consumo</fullName>
            </value>
            <value>
                <fullName>Junto al Consumo</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>