force-app/main/default/objects/Contrato2__c/fields/Familia__c.field-meta.xml
<CustomField>
    <fullName>Familia__c</fullName>
    <formula>TEXT(PartidaPresupuesto__r.Quote.Opportunity.Familia__c)</formula>
    <label>Familia</label>
    <type>Text</type>
</CustomField>