force-app/main/default/objects/Contrato2__c/fields/FechaContrato__c.field-meta.xml
<CustomField>
    <fullName>FechaContrato__c</fullName>
    <label>Fecha Contrato</label>
    <type>Date</type>
</CustomField>