force-app/main/default/objects/Contrato2__c/fields/FechaContratoAnio__c.field-meta.xml
<CustomField>
    <fullName>FechaContratoAnio__c</fullName>
    <formula>YEAR( FechaContrato__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Fecha Contrato Anio</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>