force-app/main/default/objects/Contrato2__c/fields/FechaContratoDia__c.field-meta.xml
<CustomField>
    <fullName>FechaContratoDia__c</fullName>
    <formula>DAY(FechaContrato__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Fecha Contrato Dia</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>