force-app/main/default/objects/Contrato2__c/fields/FechaContratoMes__c.field-meta.xml
<CustomField>
    <fullName>FechaContratoMes__c</fullName>
    <formula>CASE(MONTH(FechaContrato__c), 1,&#39;enero&#39;,2,&#39;febrero&#39;,3,&#39;marzo&#39;,4, &#39;abril&#39;,5, &#39;mayo&#39;, 6, &#39;junio&#39;, 7,&#39;julio&#39;,8,&#39;agosto&#39;,9,&#39;septiembre&#39;,10,&#39;octubre&#39;,11,&#39;noviembre&#39;,12,&#39;diciembre&#39;, &#39;&#39;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Fecha Contrato Mes</label>
    <type>Text</type>
</CustomField>