force-app/main/default/objects/Contrato2__c/fields/FechaEstimadaCompra__c.field-meta.xml
<CustomField>
    <fullName>FechaEstimadaCompra__c</fullName>
    <formula>PartidaPresupuesto__r.Quote.Opportunity.CloseDate</formula>
    <label>Fecha estimada de compra</label>
    <type>Date</type>
</CustomField>