force-app/main/default/objects/Contrato2__c/fields/FechaFinADC__c.field-meta.xml
<CustomField>
    <fullName>FechaFinADC__c</fullName>
    <formula>PartidaPresupuesto__r.Quote.Opportunity.FechaFinADV__c</formula>
    <label>Fecha de Fin ADC</label>
    <type>Date</type>
</CustomField>