force-app/main/default/objects/Contrato2__c/fields/FechaInicioADC__c.field-meta.xml
<CustomField>
    <fullName>FechaInicioADC__c</fullName>
    <formula>PartidaPresupuesto__r.Quote.Opportunity.FechaInicioADV__c</formula>
    <label>Fecha de Inicio ADC</label>
    <type>Date</type>
</CustomField>