force-app/main/default/objects/Contrato2__c/fields/FeeCollectionVehicle__c.field-meta.xml
<CustomField>
    <fullName>FeeCollectionVehicle__c</fullName>
    <label>Cobro de fee por vehículo a partir de:</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>0</fullName>
                <label>Mes 0</label>
            </value>
            <value>
                <fullName>1</fullName>
                <label>Mes 1</label>
            </value>
            <value>
                <fullName>2</fullName>
                <label>Mes 2</label>
            </value>
            <value>
                <fullName>3</fullName>
                <label>Mes 3</label>
            </value>
            <value>
                <fullName>4</fullName>
                <label>Mes 4</label>
            </value>
            <value>
                <fullName>5</fullName>
                <label>Mes 5</label>
            </value>
            <value>
                <fullName>6</fullName>
                <label>Mes 6</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>