force-app/main/default/objects/Contrato2__c/fields/FeeFijoVehiculo__c.field-meta.xml
<CustomField>
    <fullName>FeeFijoVehiculo__c</fullName>
    <description>Para familia Mantenimiento. Cuota mensual por administración del mantenimiento</description>
    <label>Fee fijo por vehículo</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>30</fullName>
            </value>
            <value>
                <fullName>60</fullName>
            </value>
            <value>
                <fullName>90</fullName>
            </value>
            <value>
                <fullName>120</fullName>
            </value>
            <value>
                <fullName>150</fullName>
            </value>
            <value>
                <fullName>180</fullName>
            </value>
            <value>
                <fullName>210</fullName>
            </value>
            <value>
                <fullName>240</fullName>
            </value>
            <value>
                <fullName>270</fullName>
            </value>
            <value>
                <fullName>300</fullName>
            </value>
            <value>
                <fullName>330</fullName>
            </value>
            <value>
                <fullName>360</fullName>
            </value>
            <value>
                <fullName>390</fullName>
            </value>
            <value>
                <fullName>420</fullName>
            </value>
            <value>
                <fullName>450</fullName>
            </value>
            <value>
                <fullName>480</fullName>
            </value>
            <value>
                <fullName>510</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>