force-app/main/default/objects/Contrato2__c/fields/Fianza__c.field-meta.xml
<CustomField>
    <fullName>Fianza__c</fullName>
    <label>Fianza</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>