force-app/main/default/objects/Contrato2__c/fields/FianzaCasilla__c.field-meta.xml
<CustomField>
    <fullName>FianzaCasilla__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Fianza</label>
    <type>Checkbox</type>
</CustomField>