force-app/main/default/objects/Contrato2__c/fields/FiscalAddress__c.field-meta.xml
<CustomField>
    <fullName>FiscalAddress__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Dirección Fiscal</label>
    <referenceTo>CatalogoDirecciones__c</referenceTo>
    <relationshipLabel>Administración de Ventas</relationshipLabel>
    <relationshipName>FiscalAddress</relationshipName>
    <type>Lookup</type>
</CustomField>