force-app/main/default/objects/Contrato2__c/fields/FiscalAddressText__c.field-meta.xml
<CustomField>
    <fullName>FiscalAddressText__c</fullName>
    <formula>FiscalAddress__r.Calle_Tt__c &amp; &#39; &#39; &amp; FiscalAddress__r.NumeroExterior_Tt__c &amp; &#39; &#39; &amp; FiscalAddress__r.NumeroInterior_Tt__c  &amp; &#39; &#39; &amp; FiscalAddress__r.Colonia_Tt__c &amp; &#39; &#39; &amp; FiscalAddress__r.DelegacionMunicipio_Tt__c &amp; &#39; &#39; &amp; FiscalAddress__r.Estado_Tt__c &amp; &#39; C.P &#39; &amp;  FiscalAddress__r.CodigoPostal_Tt__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Dirección Fiscal Texto</label>
    <type>Text</type>
</CustomField>