force-app/main/default/objects/Contrato2__c/fields/FolioADV_FText__c.field-meta.xml
<CustomField>
    <fullName>FolioADV_FText__c</fullName>
    <formula>HYPERLINK( &#39;https://edenredmexico.lightning.force.com/lightning/r/Contrato2__c/&#39;+Id+&#39;/view&#39; , LEFT(Name, FIND(&#39; &#39;, Name)) )</formula>
    <label>Folio ADV</label>
    <type>Text</type>
</CustomField>