force-app/main/default/objects/Contrato2__c/fields/FoodType__c.field-meta.xml
<CustomField>
    <fullName>FoodType__c</fullName>
    <label>Tipo de Comida</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Restaurante</fullName>
            </value>
            <value>
                <fullName>Comida Rápida/Fast Food</fullName>
            </value>
            <value>
                <fullName>Fonda/Cocina Económica</fullName>
            </value>
            <value>
                <fullName>Cafetería</fullName>
            </value>
            <value>
                <fullName>Panadería/Pastelería</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>