force-app/main/default/objects/Contrato2__c/fields/Frecuencia_de_Pedido__c.field-meta.xml
<CustomField>
    <fullName>Frecuencia_de_Pedido__c</fullName>
    <label>Frecuencia de Pedido</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Semanal</fullName>
            </value>
            <value>
                <fullName>Quincenal</fullName>
            </value>
            <value>
                <fullName>Mensual</fullName>
            </value>
            <value>
                <fullName>Bimestral</fullName>
            </value>
            <value>
                <fullName>Trimestral</fullName>
            </value>
            <value>
                <fullName>Semestral</fullName>
            </value>
            <value>
                <fullName>Anual</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>