force-app/main/default/objects/Contrato2__c/fields/Frecuencia_Liberacion_Automatica__c.field-meta.xml
<CustomField>
    <fullName>Frecuencia_Liberacion_Automatica__c</fullName>
    <label>Frecuencia Liberación Automatica</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Dia Especifico</fullName>
            </value>
            <value>
                <fullName>Semanal</fullName>
            </value>
            <value>
                <fullName>Quincenal</fullName>
            </value>
            <value>
                <fullName>Mensual</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>