force-app/main/default/objects/Contrato2__c/fields/FrecuenciaEstadoCuenta__c.field-meta.xml
<CustomField>
    <fullName>FrecuenciaEstadoCuenta__c</fullName>
    <label>Frecuencia Estado Cuenta</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Diario</fullName>
            </value>
            <value>
                <fullName>Semanal</fullName>
            </value>
            <value>
                <fullName>Quincenal</fullName>
            </value>
            <value>
                <fullName>Mensual</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>